--- a/build
+++ b/build
@@ -7,25 +7,23 @@ export PROGRESS_NO_TRUNC=1
 
 source ".env"
 
-DOCKER_REPO="openblas_builder"
-DOCKER_IMAGE_NAME_SAFE="${DOCKER_REPO//\//-}"
-DOCKER_CONTAINER_NAME="${DOCKER_IMAGE_NAME_SAFE}-$(date -u "+%Y-%m-%d_%H-%M-%S_%3NZ")"
+CROSS="${CROSS:-native}"
 
-#DOCKER_BASE_IMAGE="quay.io/pypa/manylinux2014_x86_64"
- DOCKER_BASE_IMAGE="ubuntu:24.04"
+DOCKER_REPO="openblas_builder"
+DOCKER_IMAGE_NAME_SAFE="${DOCKER_REPO//\//-}-${CROSS}"
+DOCKER_CONTAINER_NAME="${DOCKER_IMAGE_NAME_SAFE}-${CROSS}-$(date -u "+%Y-%m-%d_%H-%M-%S_%3NZ")"
 
 USER="user"
 GROUP="user"
 
 docker build \
+  --file="./dev/${CROSS}.dockerfile" \
   --tag="$DOCKER_IMAGE_NAME_SAFE" \
   --network=host \
-  --build-arg="DOCKER_BASE_IMAGE=${DOCKER_BASE_IMAGE}" \
   --build-arg="UID=$(id -u)" \
   --build-arg="GID=$(id -g)" \
   --build-arg="USER=${USER}" \
   --build-arg="GROUP=${GROUP}" \
-  --build-arg="URL_GCC_X86_64_UNKNOWN_LINUX_MUSL=${URL_GCC_X86_64_UNKNOWN_LINUX_MUSL}" \
   .
 
 mkdir -p .build .opt .out
@@ -36,13 +34,15 @@ docker run -it --rm \
   --hostname="${DOCKER_IMAGE_NAME_SAFE}" \
   --user="$(id -u):$(id -g)" \
   --volume="$(pwd):/workdir" \
-  --volume="$(pwd)/.opt:/opt" \
+  --volume="$(pwd)/.opt:/opt/openblas" \
   --workdir="/workdir" \
   --env="UID=$(id -u)" \
   --env="GID=$(id -g)" \
   --env="USER=${USER}" \
   --env="GROUP=${GROUP}" \
   --env="PS1=\${USER}@\${HOST}" \
-  --ulimit="core=0" \
+  --env="TZ=Etc/UTC" \
+  --env="LANG=C.UTF-8" \
+  --ulimit core=0 \
   "$DOCKER_IMAGE_NAME_SAFE" \
   bash ./scripts/main
