--- a/build
+++ b/build
@@ -7,17 +7,17 @@ export PROGRESS_NO_TRUNC=1
 
 source ".env"
 
-CROSS="${CROSS:-native}"
+CROSS_TARGET="${CROSS_TARGET:-native}"
 
 DOCKER_REPO="openblas_builder"
-DOCKER_IMAGE_NAME_SAFE="${DOCKER_REPO//\//-}-${CROSS}"
-DOCKER_CONTAINER_NAME="${DOCKER_IMAGE_NAME_SAFE}-${CROSS}-$(date -u "+%Y-%m-%d_%H-%M-%S_%3NZ")"
+DOCKER_IMAGE_NAME_SAFE="${DOCKER_REPO//\//-}-${CROSS_TARGET}"
+DOCKER_CONTAINER_NAME="${DOCKER_IMAGE_NAME_SAFE}-${CROSS_TARGET}-$(date -u "+%Y-%m-%d_%H-%M-%S_%3NZ")"
 
 USER="user"
 GROUP="user"
 
 docker build \
-  --file="./dev/${CROSS}.dockerfile" \
+  --file="./dev/${CROSS_TARGET}.dockerfile" \
   --tag="$DOCKER_IMAGE_NAME_SAFE" \
   --network=host \
   --build-arg="UID=$(id -u)" \
@@ -26,7 +26,7 @@ docker build \
   --build-arg="GROUP=${GROUP}" \
   .
 
-mkdir -p .build .opt .out
+mkdir -p .build .cache/ccache .opt .out
 
 docker run -it --rm \
   --init \
@@ -35,7 +35,9 @@ docker run -it --rm \
   --user="$(id -u):$(id -g)" \
   --volume="$(pwd):/workdir" \
   --volume="$(pwd)/.opt:/opt/openblas" \
+  --volume="$(pwd)/.cache/ccache:/cache/ccache" \
   --workdir="/workdir" \
+  --env="CROSS_TARGET=${CROSS_TARGET}" \
   --env="UID=$(id -u)" \
   --env="GID=$(id -g)" \
   --env="USER=${USER}" \
