--- a/build
+++ b/build
@@ -8,7 +8,7 @@ export PROGRESS_NO_TRUNC=1
 source ".env"
 
 CROSS_TARGET="${CROSS_TARGET:-native}"
-
+BUILD_TIME="${BUILD_TIME:-"$(date -u '+%Y-%m-%d_%H-%M-%S')"}"
 DOCKER_REPO="openblas_builder"
 DOCKER_IMAGE_NAME_SAFE="${DOCKER_REPO//\//-}-${CROSS_TARGET}"
 DOCKER_CONTAINER_NAME="${DOCKER_IMAGE_NAME_SAFE}-${CROSS_TARGET}-$(date -u "+%Y-%m-%d_%H-%M-%S_%3NZ")"
@@ -28,7 +28,7 @@ docker build -q \
 
 mkdir -p .build .cache/ccache .opt .out
 
-docker run --rm \
+docker run --rm "$(tty -s && echo "-it")" \
   --init \
   --name="$DOCKER_CONTAINER_NAME" \
   --hostname="${DOCKER_IMAGE_NAME_SAFE}" \
@@ -48,4 +48,4 @@ docker run --rm \
   --env="LANG=C.UTF-8" \
   --ulimit core=0 \
   "$DOCKER_IMAGE_NAME_SAFE" \
-  bash ./scripts/main
+  bash -c "${*:-'bash ./scripts/main'}"
